Fix: Label wrap.

--- a/sources/js/components/LabeledInput/LabeledInput.module.css
+++ b/sources/js/components/LabeledInput/LabeledInput.module.css
@@ -34,6 +34,7 @@
     font-size: 1em;
     font-weight: 700;
     user-select: none;
+    white-space: nowrap;
 }
 
 .input {
